# fast-q

./: .djlintrc  .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  render.yaml
migrations/: env.py
migrations/versions/: 685c1ca21762_add_date.py  78681f99d34f_reset.py  804d493f8b15_add_user_table.py  9666c6f66d21_add_short_name.py  a1b2c3d4e5f6_masterslot_session_qualifier.py
scripts/: inspect_db.py  seed.py
src/: main.py
src/core/: auth.py  database.py  logger.py
src/features/home/: router.py
src/features/home/queries/: get_dashboard_summary.py
src/features/home/templates/: admin_users.html  create_user.html  dashboard.html  index.html
src/features/hospitals/: commands.py  models.py  queries.py  router.py
src/features/hospitals/commands/: create_hospital.py  create_master_slot.py
src/features/hospitals/partials/: public_calendar_content.html
src/features/hospitals/queries/: get_all_hospitals.py  get_hospital.py  get_schedule.py  get_schedule_grid.py
src/features/hospitals/templates/: edit_schedule.html  public_calendar.html
src/features/info/: router.py
src/features/info/templates/: contacts.html  key_information.html
src/features/master_schedule/: router.py
src/features/master_schedule/partials/: public_calendar_content.html
src/features/resident_calendar/: models.py
src/features/residents/: models.py  router.py
src/features/users/: commands.py  models.py  queries.py  router.py
src/static/: input.css
src/templates/: auth_base.html  base.html
src/templates/components/: _indicators.html  _nav_links.html
(+31 files in other folders)
