[project]
name = "fast-q"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.26",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.15.11",
]
