[project]
name = "fast-q"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.3",
    "python-multipart>=0.0.26",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff>=0.15.11",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"  # Options: off, basic, standard, strict
# Tell pyright to ignore certain folders (like Alembic migrations)
ignore = [
    "migrations",
    ".venv",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
